# -ct5-pointers-arrays

./: CMakeLists.txt
.claude/: settings.local.json
include/: arrays_as_pointers.h  pointers_and_arrays.h  pointers_as_arrays.h
src/: arrays_as_pointers.cpp  main.cpp  pointers_and_arrays.cpp  pointers_as_arrays.cpp
